--- a/AkuteSinglePage - Copy/AkuteSinglePage/Web.config
+++ b/AkuteSinglePage - Copy/AkuteSinglePage/Web.config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-AkuteSinglePage-20140626154235;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-AkuteSinglePage-20140626154235.mdf" providerName="System.Data.SqlClient" /><add name="AkuteDBEntities" connectionString="metadata=res://*/Models.AkuteDbModel.csdl|res://*/Models.AkuteDbModel.ssdl|res://*/Models.AkuteDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:u1grzal1cg.database.windows.net,1433;initial catalog=AkuteDB;user id=SQLAdmin;password=!Kimi2007;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="AkuteDBEntities" connectionString="metadata=res://*/Models.AkuteDBModel.csdl|res://*/Models.AkuteDBModel.ssdl|res://*/Models.AkuteDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=u1grzal1cg.database.windows.net,1433;initial catalog=AkuteDB;user id=SQLAdmin;password=!Kimi2007;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
